--- a/src/Terratype.TestSite/App_Plugins/Terratype/1.0.0/views/GoogleMapsV3/config.apperance.html
+++ b/src/Terratype.TestSite/App_Plugins/Terratype/1.0.0/views/GoogleMapsV3/config.apperance.html
@@ -1,60 +1,60 @@
 ﻿<div class="umb-el-wrap control-group">
-    <label for="terratype_{{identifier}}_googlemapv3_variety_basic" class="control-label">
+    <label for="terratype_{{view.identifier}}_googlemapv3_variety_basic" class="control-label">
         Show Basic Map:
         <small>
             Do you want to see the basic road map
         </small>
     </label>
     <div class="controls">
-        <input id="terratype_{{identifier}}_googlemapv3_variety_basic" type="checkbox" ng-model="model.value.provider.variety.basic" ng-change="bag.provider.optionChange(bag.provider)" ng-disabled="model.value.provider.variety.satellite == false && model.value.provider.variety.terrain == false" />
+        <input id="terratype_{{view.identifier}}_googlemapv3_variety_basic" type="checkbox" ng-model="view.config.provider.variety.basic" ng-change="view.provider.events.optionChange()" ng-disabled="view.config.provider.variety.satellite == false && view.config.provider.variety.terrain == false" />
     </div>
 </div>
 <div class="umb-el-wrap control-group">
-    <label for="terratype_{{identifier}}_googlemapv3_variety_terrain" class="control-label">
+    <label for="terratype_{{view.identifier}}_googlemapv3_variety_terrain" class="control-label">
         Show Terrain Map:
         <small>
             Do you want to see the basic map with terrain
         </small>
     </label>
     <div class="controls">
-        <input id="terratype_{{identifier}}_googlemapv3_variety_terrain" type="checkbox" ng-model="model.value.provider.variety.terrain" ng-change="bag.provider.optionChange(bag.provider)" ng-disabled="model.value.provider.variety.satellite == false && model.value.provider.variety.basic == false" />
+        <input id="terratype_{{view.identifier}}_googlemapv3_variety_terrain" type="checkbox" ng-model="view.config.provider.variety.terrain" ng-change="view.provider.events.optionChange()" ng-disabled="view.config.provider.variety.satellite == false && view.config.provider.variety.basic == false" />
     </div>
 </div>
 <div class="umb-el-wrap control-group">
-    <label for="terratype_{{identifier}}_googlemapv3_variety_basic" class="control-label">
+    <label for="terratype_{{view.identifier}}_googlemapv3_variety_basic" class="control-label">
         Show Satellite Map:
         <small>
             Do you want to see the satellite map
         </small>
     </label>
     <div class="controls">
-        <input id="terratype_{{identifier}}_googlemapv3_variety_satellite" type="checkbox" ng-model="model.value.provider.variety.satellite" ng-change="bag.provider.optionChange(bag.provider)" ng-disabled="model.value.provider.variety.basic == false && model.value.provider.variety.terrain == false" />
+        <input id="terratype_{{view.identifier}}_googlemapv3_variety_satellite" type="checkbox" ng-model="view.config.provider.variety.satellite" ng-change="view.provider.events.optionChange()" ng-disabled="view.config.provider.variety.basic == false && view.config.provider.variety.terrain == false" />
     </div>
 </div>
-<div ng-show="(model.value.provider.variety.basic + model.value.provider.variety.satellite + model.value.provider.variety.terrain) > 1">
+<div ng-show="(view.config.provider.variety.basic + view.config.provider.variety.satellite + view.config.provider.variety.terrain) > 1">
     <div class="umb-el-wrap control-group">
-        <label for="terratype_{{identifier}}_googlemapv3_variety_satellite" class="control-label">
+        <label for="terratype_{{view.identifier}}_googlemapv3_variety_satellite" class="control-label">
             Map Selector Type:
             <small>
                 How do you want the user to select between viewing a basic, terrain and satellite map
             </small>
         </label>
         <div class="controls">
-            <select id="terratype_{{identifier}}_googlemapv3_variety_selector_type" ng-model="model.value.provider.variety.selector.type" class="umb-editor" ng-change="bag.provider.optionChange(bag.provider)">
+            <select id="terratype_{{view.identifier}}_googlemapv3_variety_selector_type" ng-model="view.config.provider.variety.selector.type" class="umb-editor" ng-change="view.provider.events.optionChange()">
                 <option value="1">Horizontal Bar</option>
                 <option value="2">Dropdown Menu</option>
             </select>
         </div>
     </div>
     <div class="umb-el-wrap control-group">
-        <label for="terratype_{{identifier}}_googlemapv3_variety_selector_position" class="control-label">
+        <label for="terratype_{{view.identifier}}_googlemapv3_variety_selector_position" class="control-label">
             Map Selector Position:
             <small>
                 Where do you want the map selector to be positioned on the map
             </small>
         </label>
         <div class="controls">
-            <select id="terratype_{{identifier}}_googlemapv3_variety_selector_position" ng-model="model.value.provider.variety.selector.position" class="umb-editor" ng-change="bag.provider.optionChange(bag.provider)" convert-to-number>
+            <select id="terratype_{{view.identifier}}_googlemapv3_variety_selector_position" ng-model="view.config.provider.variety.selector.position" class="umb-editor" ng-change="view.provider.events.optionChange()" convert-to-number>
                 <option value="0">[Default]</option>
                 <option value="1">Top Left</option>
                 <option value="2">Top Center</option>
@@ -75,25 +75,25 @@
 </div>
 
 <div class="umb-el-wrap control-group">
-    <label for="terratype_{{identifier}}_googlemapv3_fullscreen_enable" class="control-label">
+    <label for="terratype_{{view.identifier}}_googlemapv3_fullscreen_enable" class="control-label">
         Fullscreen:
         <small>
             Allow the map to take up the whole screen. Only available on certain browsers / devices.
         </small>
     </label>
     <div class="controls">
-        <input id="terratype_{{identifier}}_googlemapv3_fullscreen_enable" type="checkbox" ng-model="model.value.provider.fullscreen.enable" ng-change="bag.provider.optionChange(bag.provider)" />
+        <input id="terratype_{{view.identifier}}_googlemapv3_fullscreen_enable" type="checkbox" ng-model="view.config.provider.fullscreen.enable" ng-change="view.provider.events.optionChange()" />
     </div>
 </div>
 <div class="umb-el-wrap control-group" ng-show="model.value.provider.fullscreen.enable == true">
-    <label for="terratype_{{identifier}}_googlemapv3_fullscreen_position" class="control-label">
+    <label for="terratype_{{view.identifier}}_googlemapv3_fullscreen_position" class="control-label">
         Fullscreen Button Position:
         <small>
             Where do you want the fullscreen button to be positioned on the map
         </small>
     </label>
     <div class="controls">
-        <select id="terratype_{{identifier}}_googlemapv3_fullscreen_position" ng-model="model.value.provider.fullscreen.position" class="umb-editor" ng-change="bag.provider.optionChange(bag.provider)" convert-to-number>
+        <select id="terratype_{{view.identifier}}_googlemapv3_fullscreen_position" ng-model="view.config.provider.fullscreen.position" class="umb-editor" ng-change="view.provider.events.optionChange()" convert-to-number>
             <option value="0">[Default]</option>
             <option value="1">Top Left</option>
             <option value="2">Top Center</option>
@@ -113,65 +113,37 @@
 </div>
 
 <div class="umb-el-wrap control-group">
-    <label for="terratype_{{identifier}}_googlemapv3_scale_enable" class="control-label">
+    <label for="terratype_{{view.identifier}}_googlemapv3_scale_enable" class="control-label">
         Scale:
         <small>
             Allow the map to show the current scale being used
         </small>
     </label>
     <div class="controls">
-        <input id="terratype_{{identifier}}_googlemapv3_scale_enable" type="checkbox" ng-model="model.value.provider.scale.enable" ng-change="bag.provider.optionChange(bag.provider)" />
+        <input id="terratype_{{view.identifier}}_googlemapv3_scale_enable" type="checkbox" ng-model="view.config.provider.scale.enable" ng-change="view.provider.events.optionChange()" />
     </div>
 </div>
-<!--    Scale has no position yet
-<div class="umb-el-wrap control-group" ng-show="model.value.provider.scale.enable == true">
-    <label for="terratype_{{identifier}}_googlemapv3_scale_position" class="control-label">
-        Scale Position:
-        <small>
-            Where do you want the scale to be positioned on the map
-        </small>
-    </label>
-    <div class="controls">
-        <select id="terratype_{{identifier}}_googlemapv3_scale_position" ng-model="model.value.provider.scale.position" class="umb-editor" ng-change="bag.provider.optionChange(bag.provider)">
-            <option value="0">[Default]</option>
-            <option value="1">Top Left</option>
-            <option value="2">Top Center</option>
-            <option value="3">Top Right</option>
-            <option value="5">Left Top</option>
-            <option value="7">Right Top</option>
-            <option value="4">Left Center</option>
-            <option value="13">Center</option>
-            <option value="8">Right Center</option>
-            <option value="6">Left Bottom</option>
-            <option value="9">Right Bottom</option>
-            <option value="10">Bottom Left</option>
-            <option value="11">Bottom Center</option>
-            <option value="12">Bottom Right</option>
-        </select>
-    </div>
-</div>
--->
 
 <div class="umb-el-wrap control-group">
-    <label for="terratype_{{identifier}}_googlemapv3_streetview_enable" class="control-label">
+    <label for="terratype_{{view.identifier}}_googlemapv3_streetview_enable" class="control-label">
         Streetview:
         <small>
             Allow user to select streetview mode
         </small>
     </label>
     <div class="controls">
-        <input id="terratype_{{identifier}}_googlemapv3_streetview_enable" type="checkbox" ng-model="model.value.provider.streetView.enable" ng-change="bag.provider.optionChange(bag.provider)" />
+        <input id="terratype_{{view.identifier}}_googlemapv3_streetview_enable" type="checkbox" ng-model="view.config.provider.streetView.enable" ng-change="view.provider.events.optionChange()" />
     </div>
 </div>
 <div class="umb-el-wrap control-group" ng-show="model.value.provider.streetView.enable == true">
-    <label for="terratype_{{identifier}}_googlemapv3_streetview_position" class="control-label">
+    <label for="terratype_{{view.identifier}}_googlemapv3_streetview_position" class="control-label">
         Scale Position:
         <small>
             Where do you want the streetview 'pegman' to be positioned on the map
         </small>
     </label>
     <div class="controls">
-        <select id="terratype_{{identifier}}_googlemapv3_streetview_position" ng-model="model.value.provider.streetView.position" class="umb-editor" ng-change="bag.provider.optionChange(bag.provider)" convert-to-number>
+        <select id="terratype_{{view.identifier}}_googlemapv3_streetview_position" ng-model="view.config.provider.streetView.position" class="umb-editor" ng-change="view.provider.events.optionChange()" convert-to-number>
             <option value="0">[Default]</option>
             <option value="1">Top Left</option>
             <option value="2">Top Center</option>
@@ -191,25 +163,25 @@
 </div>
 
 <div class="umb-el-wrap control-group">
-    <label for="terratype_{{identifier}}_googlemapv3_zoomcontrol_enable" class="control-label">
+    <label for="terratype_{{view.identifier}}_googlemapv3_zoomcontrol_enable" class="control-label">
         Zoom:
         <small>
             Show zoom control
         </small>
     </label>
     <div class="controls">
-        <input id="terratype_{{identifier}}_googlemapv3_zoomcontrol_enable" type="checkbox" ng-model="model.value.provider.zoomControl.enable" ng-change="bag.provider.optionChange(bag.provider)" />
+        <input id="terratype_{{view.identifier}}_googlemapv3_zoomcontrol_enable" type="checkbox" ng-model="view.config.provider.zoomControl.enable" ng-change="view.provider.events.optionChange()" />
     </div>
 </div>
 <div class="umb-el-wrap control-group" ng-show="model.value.provider.zoomControl.enable == true">
-    <label for="terratype_{{identifier}}_googlemapv3_zoomcontrol_position" class="control-label">
+    <label for="terratype_{{view.identifier}}_googlemapv3_zoomcontrol_position" class="control-label">
         Zoom Position:
         <small>
             Where do you want the zoom control buttons to be positioned on the map
         </small>
     </label>
     <div class="controls">
-        <select id="terratype_{{identifier}}_googlemapv3_zoomcontrol_position" ng-model="model.value.provider.zoomControl.position" class="umb-editor" ng-change="bag.provider.optionChange(bag.provider)" convert-to-number>
+        <select id="terratype_{{view.identifier}}_googlemapv3_zoomcontrol_position" ng-model="view.config.provider.zoomControl.position" class="umb-editor" ng-change="view.provider.events.optionChange()" convert-to-number>
             <option value="0">[Default]</option>
             <option value="1">Top Left</option>
             <option value="2">Top Center</option>
@@ -228,15 +200,15 @@
     </div>
 </div>
 
-<div class="umb-el-wrap control-group" ng-show="model.value.provider.variety.basic == true">
-    <label for="terratype_{{identifier}}_googlemapv3_style" class="control-label">
+<div class="umb-el-wrap control-group" ng-show="view.config.provider.variety.basic == true">
+    <label for="terratype_{{view.identifier}}_googlemapv3_style" class="control-label">
         Styling:
         <small>
             Predefined map styles
         </small>
     </label>
     <div class="controls">
-        <select id="terratype_{{identifier}}_googlemapv3_style" ng-model="model.value.provider.predefineStyling" class="umb-editor" ng-change="bag.provider.styleChange(bag.provider)">
+        <select id="terratype_{{view.identifier}}_googlemapv3_style" ng-model="view.config.provider.predefineStyling" class="umb-editor" ng-change="view.provider.events.styleChange()">
             <option value="">Standard</option>
             <option value="avocado">Avocado</option>
             <option value="blush">Blush</option>
@@ -265,74 +237,47 @@
     </div>
 </div>
 <div class="umb-el-wrap control-group">
-    <label for="terratype_{{identifier}}_googlemapv3_showroads" class="control-label">
+    <label for="terratype_{{view.identifier}}_googlemapv3_showroads" class="control-label">
         Show Roads:
         <small>
             Do you want roads to appear on the map
         </small>
     </label>
     <div class="controls">
-        <input id="terratype_{{identifier}}_googlemapv3_showroads" type="checkbox" ng-model="model.value.provider.showRoads" ng-change="bag.provider.styleChange(bag.provider)" />
+        <input id="terratype_{{view.identifier}}_googlemapv3_showroads" type="checkbox" ng-model="view.config.provider.showRoads" ng-change="view.provider.events.styleChange()" />
     </div>
 </div>
 <div class="umb-el-wrap control-group">
-    <label for="terratype_{{identifier}}_googlemapv3_showlandmarks" class="control-label">
+    <label for="terratype_{{view.identifier}}_googlemapv3_showlandmarks" class="control-label">
         Show Landmarks:
         <small>
             Do you want landmarks to appear on the map
         </small>
     </label>
     <div class="controls">
-        <input id="terratype_{{identifier}}_googlemapv3_showlandmarks" type="checkbox" ng-model="model.value.provider.showLandmarks" ng-change="bag.provider.styleChange(bag.provider)" />
+        <input id="terratype_{{view.identifier}}_googlemapv3_showlandmarks" type="checkbox" ng-model="view.config.provider.showLandmarks" ng-change="view.provider.events.styleChange()" />
     </div>
 </div>
 <div class="umb-el-wrap control-group">
-    <label for="terratype_{{identifier}}_googlemapv3_showlabels" class="control-label">
+    <label for="terratype_{{view.identifier}}_googlemapv3_showlabels" class="control-label">
         Show Labels:
         <small>
             Do you want labels (names of countries, regions, areas, etc) to appear on the map
         </small>
     </label>
     <div class="controls">
-        <input id="terratype_{{identifier}}_googlemapv3_showlabels" type="checkbox" ng-model="model.value.provider.showLabels" ng-change="bag.provider.styleChange(bag.provider)" />
+        <input id="terratype_{{view.identifier}}_googlemapv3_showlabels" type="checkbox" ng-model="view.config.provider.showLabels" ng-change="view.provider.events.styleChange()" />
     </div>
 </div>
 <div class="umb-el-wrap control-group">
-    <label for="terratype_{{identifier}}_googlemapv3_defaultlocation" class="control-label">
+    <label for="terratype_{{view.identifier}}_googlemapv3_defaultlocation" class="control-label">
         Default location:
         <small>
             Select the default location when displaying this map to a content editor
         </small>
     </label>
     <div class="controls">
-        <div ng-show="bag.provider.statusLoading">
-            <img src="/umbraco/assets/img/loader.gif" />
-        </div>
-        <div ng-show="bag.provider.statusFailed">
-            <img src="/umbraco/images/false.png" />
-            <span style="color:red;padding-right:10px;">Invalid Google Map API Key</span>
-        </div>
-        <div ng-show="bag.provider.statusError">
-            <img src="/umbraco/images/false.png" />
-            <span style="color:red;padding-right:10px;">Failed to load Google Maps V3 multiple times, please manually refresh the page and try again</span>
-        </div>
-        <div ng-show="bag.provider.statusDuplicate">
-            <img src="/umbraco/images/false.png" />
-            <span style="color:red;padding-right:10px;">Detected multiple GoogleMapsV3 maps with different configuration; All Google Maps must share the same Api Key, Coordinate System, ForceHttps switch and Language settings</span>
-        </div>
-
-        <div ng-show="bag.provider.statusSuccess" class="umb-editor">
-            <div ng-show="model.value.search.enable != 0" style="margin-bottom:5px;">
-                <input id="terratype_{{identifier}}_googlemapv3_lookup" class="umb-editor umb-textstring textstring" type="text" placeholder="Search" ng-model="model.value.lookup" spellcheck=false>
-            </div>
-            <div style="overflow:hidden;">
-                <div id="terratype_{{identifier}}_googlemapv3_map" style="height:400px" ng-show="bag.provider.showMap">
-                </div>
-            </div>
-
-            <div style="margin-top:5px">
-                <input type="text" id="terratype_{{identifier}}_googlemapv3_defaultlocation" class="umb-editor umb-textstring textstring" placeholder="latitude (-90.0 to 90.0), longitude (-180.0 to 180.0)" ng-model="bag.position.datumText" ng-change="bag.provider.datumChange(bag.provider, bag.position.datumText)" ng-style="bag.position.datumStyle" />
-            </div>
-        </div>
+        <ng-include src="view.provider.events.files.views.editor.apperance">
+        </ng-include>
     </div>
 </div>
