--- a/src/Terratype.TestSite/App_Plugins/Terratype/1.0.0/views/GoogleMapsV3/config.definition.html
+++ b/src/Terratype.TestSite/App_Plugins/Terratype/1.0.0/views/GoogleMapsV3/config.definition.html
@@ -1,13 +1,13 @@
-﻿<div ng-disabled="bag.provider.statusLoading">
+﻿<div ng-disabled="view.provider.status.loading">
     <div class="umb-el-wrap control-group">
-        <label for="terratype_{{identifier}}_googlemapv3_version" class="control-label">
+        <label for="terratype_{{view.identifier}}_googlemapv3_version" class="control-label">
             Version
             <small>
                 Which release of Google Maps V3 would you like to target (Note: Even when specifying a specific version the loaded version will vary depending on your browser)
             </small>
         </label>
         <div class="controls">
-            <select id="terratype_{{identifier}}_googlemapv3_version" ng-model="model.value.provider.version" class="umb-editor" ng-change="bag.provider.versionChange(bag.provider)">
+            <select id="terratype_{{view.identifier}}_googlemapv3_version" ng-model="view.config.provider.version" class="umb-editor" ng-change="view.provider.events.versionChange()">
                 <option value="3">Stable</option>
                 <option value="3.exp">Experimental</option>
                 <option value="3.27">3.27 (Released 10 January 2017)</option>
@@ -39,63 +39,63 @@
                 <option value="3.1">3.1 (Released 28 September 2010)</option>
                 <option value="3.0">3.0 (Released 18 May 2010)</option>
             </select>
-            <div ng-show="bag.provider.version">
+            <div ng-show="view.provider.version">
                 <small>
-                    Google Maps V{{bag.provider.version}} has been loaded. See <a href="https://developers.google.com/maps/documentation/javascript/releases#3{{bag.provider.versionMajor}}" target="_blank">changelog</a> for details
+                    Google Maps V{{view.provider.version}} has been loaded. See <a href="https://developers.google.com/maps/documentation/javascript/releases#3{{view.provider.versionMajor}}" target="_blank">changelog</a> for details
                 </small>
             </div>
         </div>
     </div>
     <div class="umb-el-wrap control-group">
-        <label for="terratype_{{identifier}}_googlemapv3_apikey" class="control-label">
+        <label for="terratype_{{view.identifier}}_googlemapv3_apikey" class="control-label">
             Google API Key:
             <small>
                 Enter your <a href="https://console.developers.google.com/apis/credentials">Google Map API Key</a> which is linked to this domain. Using localhost with a port number also requires a key. Deploying this Umbraco to other domains requires those domains to be linked to this Google Map API key too.
             </small>
         </label>
         <div class="controls">
-            <input id="terratype_{{identifier}}_googlemapv3_apikey" type="text" ng-model="model.value.provider.apiKey" class="umb-editor umb-textstring textstring" placeholder="Google API key" spellcheck=false ng-change="bag.provider.statusReload = true" />
+            <input id="terratype_{{view.identifier}}_googlemapv3_apikey" type="text" ng-model="view.config.provider.apiKey" class="umb-editor umb-textstring textstring" placeholder="Google API key" spellcheck=false ng-change="view.status.reload = true" />
             <div>
                 <a href="https://developers.google.com/maps/documentation/javascript/get-api-key#get-an-api-key" target="_blank" style="font-size:smaller;">[Get a Key]</a>
                 <div>
-                    <div ng-show="bag.provider.statusLoading">
+                    <div ng-show="view.status.loading">
                         <img src="/umbraco/assets/img/loader.gif" />
                     </div>
-                    <div ng-show="bag.provider.statusFailed">
+                    <div ng-show="view.status.failed">
                         <img src="/umbraco/images/false.png" />
                         <span style="color:red;padding-right:10px;">Invalid API Key</span>
                     </div>
-                    <div ng-show="bag.provider.statusSuccess">
+                    <div ng-show="view.status.success">
                         <img src="/umbraco/images/true.png" />
                         <span style="color:green;">API Key is valid</span>
                     </div>
-                    <div ng-show="bag.provider.statusReload">
-                        <button type="button" ng-click="bag.provider.reloadMap()" title="Try and reload map using this Google Map API Key">Retry</button>
+                    <div ng-show="view.status.reload">
+                        <button type="button" ng-click="view.provider.events.reload()" title="Try and reload map using this Google Map API Key">Retry</button>
                     </div>
                 </div>
             </div>
         </div>
     </div>
     <div class="umb-el-wrap control-group">
-        <label for="terratype_{{identifier}}_googlemapv3_forcehttps" class="control-label">
+        <label for="terratype_{{view.identifier}}_googlemapv3_forcehttps" class="control-label">
             Force Https:
             <small>
                 Force all Google Map requests to use HTTPS protocol, even if the Umbraco instance is running on HTTP. Only relevant when Umbraco is running on HTTP.
             </small>
         </label>
         <div class="controls">
-            <input id="terratype_{{identifier}}_googlemapv3_forcehttps" type="checkbox" ng-model="model.value.provider.forceHttps" ng-change="bag.provider.forceHttpsChange(bag.provider)" />
+            <input id="terratype_{{view.identifier}}_googlemapv3_forcehttps" type="checkbox" ng-model="view.config.provider.forceHttps" ng-change="view.provider.events.forceHttpsChange()" />
         </div>
     </div>
     <div class="umb-el-wrap control-group">
-        <label for="terratype_{{identifier}}_googlemapv3_language" class="control-label">
+        <label for="terratype_{{view.identifier}}_googlemapv3_language" class="control-label">
             Language:
             <small>
                 Primary language used to display places
             </small>
         </label>
         <div class="controls">
-            <select id="terratype_{{identifier}}_googlemapv3_language" ng-model="model.value.provider.language" class="umb-editor" ng-change="bag.provider.languageChange(bag.provider)">
+            <select id="terratype_{{view.identifier}}_googlemapv3_language" ng-model="view.config.provider.language" class="umb-editor" ng-change="view.provider.events.languageChange()">
                 <option value="">[Use Umbraco]</option>
                 <option value="ab">Abkhazian</option>
                 <option value="aa">Afar</option>
