--- a/src/Terratype.TestSite/App_Plugins/Terratype/1.0.0/views/GoogleMapsV3/editor.apperance.html
+++ b/src/Terratype.TestSite/App_Plugins/Terratype/1.0.0/views/GoogleMapsV3/editor.apperance.html
@@ -1,35 +1,35 @@
-﻿<div id="terratype_{{view.identifier}}_googlemapv3">
-    <div ng-show="view.status.loading">
+﻿<div id="terratype_{{view().identifier}}_googlemapv3">
+    <div ng-show="view().status.loading">
         <img src="/umbraco/assets/img/loader.gif" />
     </div>
-    <div ng-show="view.status.failed">
+    <div ng-show="view().status.failed">
         <img src="/umbraco/images/false.png" />
         <span style="color:red;padding-right:10px;">Invalid Google Map API Key</span>
     </div>
-    <div ng-show="view.status.error">
+    <div ng-show="view().status.error">
         <img src="/umbraco/images/false.png" />
         <span style="color:red;padding-right:10px;">Failed to load Google Maps V3 multiple times, please manually refresh the page and try again</span>
     </div>
-    <div ng-show="view.status.duplicate">
+    <div ng-show="view().status.duplicate">
         <img src="/umbraco/images/false.png" />
         <span style="color:red;padding-right:10px;">Detected multiple GoogleMapsV3 maps with different configuration; All Google Maps must share the same Api Key, Coordinate System, ForceHttps switch and Language settings</span>
     </div>
-    <div ng-show="view.status.searchFailed">
+    <div ng-show="view().status.searchFailed">
         <img src="/umbraco/images/false.png" />
         <span style="color:red;padding-right:10px;">Need to enable <a href="https://console.developers.google.com/apis" target="_blank">Google Places API Web Service</a> for your Google API Key</span>
     </div>
 
-    <div ng-show="view.status.success" class="umb-editor">
-        <div ng-show="model.value.search.enable != 0" style="margin-bottom:5px;">
-            <input id="terratype_{{view.identifier}}_googlemapv3_lookup" class="umb-editor umb-textstring textstring" type="text" placeholder="Search" ng-model="model.value.lookup" spellcheck=false>
+    <div ng-show="view().status.success" class="umb-editor">
+        <div ng-show="store().search.enable != 0 && config().search.enable != 0" style="margin-bottom:5px;">
+            <input id="terratype_{{view().identifier}}_googlemapv3_lookup" class="umb-editor umb-textstring textstring" type="text" placeholder="Search" ng-model="store().lookup" spellcheck=false>
         </div>
         <div style="overflow:hidden;">
-            <div id="terratype_{{view.identifier}}_googlemapv3_map" style="height:{{config.height}}px" ng-show="view.showMap">
+            <div id="terratype_{{view().identifier}}_googlemapv3_map" style="height:{{config().height}}px" ng-show="view().showMap">
             </div>
         </div>
 
         <div style="margin-top:5px">
-            <input type="text" id="terratype_{{view.identifier}}_googlemapv3_defaultlocation" class="umb-editor umb-textstring textstring" placeholder="latitude (-90.0 to 90.0), longitude (-180.0 to 180.0)" ng-model="view.position.datumText" ng-change="$scope.view.events.datumChange(view.position.datumText)" ng-style="view.position.datumStyle" />
+            <input type="text" id="terratype_{{view().identifier}}_googlemapv3_defaultlocation" class="umb-editor umb-textstring textstring" placeholder="latitude (-90.0 to 90.0), longitude (-180.0 to 180.0)" ng-model="view().position.datumText" ng-change="view().provider.events.datumChange(view().position.datumText)" ng-style="view().position.datumStyle" />
         </div>
     </div>
 </div>
