--- a/src/Terratype.TestSite/App_Plugins/Terratype/1.0.0/views/editor.html
+++ b/src/Terratype.TestSite/App_Plugins/Terratype/1.0.0/views/editor.html
@@ -1,11 +1,11 @@
-﻿<div class="ng-cloak terratype" ng-controller="terratype" ng-init="view.initEditor()">
-    <div ng-show="view.isPreview">
-        <div ng-style="{'background-image':'url(' + view.provider.events.files.mapExample + ')','padding-top': '10px 0 10px 25px', 'margin':'-40px 0 0 -10px', 'height':'100px'}">
+﻿<div class="ng-cloak terratype" ng-controller="terratype" ng-init="view().initEditor()" ng-show="!view().loading">
+    <div ng-show="view().isPreview">
+        <div ng-style="{'background-image':'url(' + view().provider.events.files.mapExample + ')','padding-top': '10px 0 10px 25px', 'margin':'-40px 0 0 -10px', 'height':'100px'}">
             <div style="text-align:center">
-                <div ng-show="model.value.debug != 1">
-                    <img ng-src="{{absoluteUrl(view.config.icon.url)}}" style="width:{{view.config.icon.size.width}}px;height:{{view.config.icon.size.height}}px;margin-top:25px;" />
+                <div ng-show="store().debug != 1">
+                    <img ng-src="{{view().absoluteUrl(config().icon.url)}}" ng-style="{'width': config().icon.size.width + 'px', 'height': config().icon.size.height + 'px', 'margin-top':'25px'}" />
                 </div>
-                <div ng-show="view.config.debug == 1">
+                <div ng-show="config().debug == 1">
                     <h2 style="padding-top:25px;">
                         DEBUG MODE
                     </h2>
@@ -13,12 +13,12 @@
             </div>
         </div>
     </div>
-    <div ng-show="!view.isPreview">
-        <div ng-show="view.config.debug != 1">
-            <ng-include src="view.provider.events.files.views.editor.apperance">
+    <div ng-show="!view().isPreview">
+        <div ng-show="config().debug != 1">
+            <ng-include src="view().provider.events.files.views.editor.apperance">
             </ng-include>
         </div>
-        <div ng-show="view.config.debug != 0">
+        <div ng-show="config().debug != 0">
             <div ng-show="error" style="color:red;">
                 Error loading Terratype control, the json below is corrupt
             </div>
