GMaps Fixed Tab switching

--- a/src/Terratype.TestSite/App_Plugins/Terratype/1.0.0/views/GoogleMapsV3/config.apperance.html
+++ b/src/Terratype.TestSite/App_Plugins/Terratype/1.0.0/views/GoogleMapsV3/config.apperance.html
@@ -200,7 +200,7 @@
     </div>
 </div>
 
-<div class="umb-el-wrap control-group" ng-show="config().provider.variety.basic == true">
+<div class="umb-el-wrap control-group" ng-show="config().provider.variety.basic == true || config().provider.variety.terrain == true">
     <label for="terratype_{{view().identifier}}_googlemapv3_style" class="control-label">
         Styling:
         <small>
