--- a/src/Terratype.TestSite/App_Plugins/Terratype/1.0.0/views/editor.html
+++ b/src/Terratype.TestSite/App_Plugins/Terratype/1.0.0/views/editor.html
@@ -22,7 +22,7 @@
             <div ng-show="error" style="color:red;">
                 Error loading Terratype control, the json below is corrupt
             </div>
-            <textarea style="height:300px;width:100%;margin-top:20px;background-color:khaki;color:black;" spellcheck=false ng-model="model.value" json-text></textarea>
+            <textarea style="height:300px;width:100%;margin:20px 10px 0 0;background-color:khaki;color:black;" spellcheck=false ng-model="model.value" json-text></textarea>
         </div>
     </div>
 </div>
