Gamps slowed down broadcast events when lots of maps exist

--- a/src/Terratype.TestSite/App_Plugins/Terratype/1.0.0/views/config.html
+++ b/src/Terratype.TestSite/App_Plugins/Terratype/1.0.0/views/config.html
@@ -12,7 +12,7 @@
         </div>
     </div>
     <br />
-    <fieldset ng-show="view().provider.id && view().provider.loaded" style="padding-left:15px;">
+    <fieldset ng-show="view().provider.id" style="padding-left:15px;">
         <a href="{{view().provider.referenceUrl}}" target="_blank">
             <legend ng-style="{'padding-left':'36px', 'background-image':'url(' + view().provider.events.files.logo + ')', 'background-size': 'auto 32px', 'background-repeat': 'no-repeat'}">
                 {{view().provider.name}}
