--- a/src/Terratype.TestSite/App_Plugins/Terratype/1.0.0/views/editor.html
+++ b/src/Terratype.TestSite/App_Plugins/Terratype/1.0.0/views/editor.html
@@ -15,7 +15,7 @@
                     </div>
                     <div ng-show="config().debug == 1">
                         <h2 style="padding-top:25px;">
-                            DEBUG MODE
+                            <localize key="terratypeEditor_debugMode">DEBUG MODE</localize>
                         </h2>
                     </div>
                 </div>
@@ -28,7 +28,7 @@
             </div>
             <div ng-show="config().debug != 0">
                 <div ng-show="error" style="color:red;">
-                    Error loading Terratype control, the json below is corrupt
+                    <localize key="terratypeEditor_error">Error loading Terratype control, the json below is corrupt</localize>
                 </div>
                 <textarea style="height:300px;width:100%;margin:20px 10px 0 0;background-color:khaki;color:black;" spellcheck=false ng-model="model.value" json-text></textarea>
             </div>
