--- a/src/Terratype.GoogleMapsV3/Views/editor.apperance.html
+++ b/src/Terratype.GoogleMapsV3/Views/editor.apperance.html
@@ -4,25 +4,25 @@
     </div>
     <div ng-show="view().status.failed">
         <img src="/umbraco/images/false.png" />
-        <span style="color:red;padding-right:10px;">Invalid Google Map API Key</span>
+        <span style="color:red;padding-right:10px;"><localize key="terratypeGoogleMapsV3EditorApperance_statusInvalid">Invalid Google Map API Key</localize></span>
     </div>
     <div ng-show="view().status.error">
         <img src="/umbraco/images/false.png" />
-        <span style="color:red;padding-right:10px;">Failed to load Google Maps V3 multiple times, please manually refresh the page and try again</span>
+        <span style="color:red;padding-right:10px;"><localize key="terratypeGoogleMapsV3EditorApperance_statusError">Failed to load Google Maps V3 multiple times, please manually refresh the page and try again</localize></span>
     </div>
     <div ng-show="view().status.duplicate">
         <img src="/umbraco/images/false.png" />
-        <span style="color:red;padding-right:10px;">Detected multiple GoogleMapsV3 maps with different configuration; All Google Maps must share the same Api Key, Coordinate System, ForceHttps switch and Language settings</span>
+        <span style="color:red;padding-right:10px;"><localize key="terratypeGoogleMapsV3EditorApperance_statusDuplicate">Detected multiple GoogleMapsV3 maps with different configuration; All Google Maps must share the same Api Key, Coordinate System, ForceHttps switch and Language settings</localize></span>
     </div>
     <div ng-show="view().status.searchFailed">
         <img src="/umbraco/images/false.png" />
-        <span style="color:red;padding-right:10px;">Need to enable <a href="https://console.developers.google.com/apis" target="_blank">Google Places API Web Service</a> for your Google API Key</span>
+        <span style="color:red;padding-right:10px;"><localize key="terratypeGoogleMapsV3EditorApperance_statusSearchFailed">Need to enable Google Places API Web Service</localize></span>
     </div>
 
     <div ng-show="view().status.success" class="umb-editor">
         <div>
             <div ng-show="store().search.enable != 0 && config().search.enable != 0">
-                <input id="terratype_{{view().identifier}}_googlemapv3_lookup" class="umb-editor umb-textstring textstring" type="text" placeholder="Search" ng-model="store().lookup" spellcheck=false style="z-index: 10000 !important;">
+                <input id="terratype_{{view().identifier}}_googlemapv3_lookup" class="umb-editor umb-textstring textstring" type="text" localize="placeholder" placeholder="@terratypeGoogleMapsV3EditorApperance_searchPlaceholder" ng-model="store().lookup" spellcheck=false style="z-index: 10000 !important;">
             </div>
         </div>
         <div style="height:1px;width:206px;display:inline-block;">
@@ -39,7 +39,7 @@
         </div>
         <div style="margin-top:-15px;">
             <div>
-                <input type="text" id="terratype_{{view().identifier}}_googlemapv3_defaultlocation" class="umb-editor umb-textstring textstring" placeholder="latitude (-90.0 to 90.0), longitude (-180.0 to 180.0)" ng-model="view().position.datumText" ng-change="view().provider.events.datumChange(view().position.datumText)" ng-style="view().position.datumStyle" />
+                <input type="text" id="terratype_{{view().identifier}}_googlemapv3_location" class="umb-editor umb-textstring textstring" localize="placeholder" placeholder="@terratypeGoogleMapsV3EditorApperance_locationPlaceholder" ng-model="view().position.datumText" ng-change="view().provider.events.datumChange(view().position.datumText)" ng-style="view().position.datumStyle" />
             </div>
         </div>
     </div>
