--- a/src/Terratype.TestSite/Views/ArchetypeMap.cshtml
+++ b/src/Terratype.TestSite/Views/ArchetypeMap.cshtml
@@ -3,20 +3,30 @@
 @using Terratype;
 @{
     Layout = null;
+    var jquery = false;
+    if (Request.QueryString["jquery"] != null)
+    {
+        //  Add jquery to page, this will be picked up by Terratype and used instead of native js
+        <script src="https://code.jquery.com/jquery-3.1.1.min.js"
+                integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+                crossorigin="anonymous"></script>
+        jquery = true;
+    }
 }
+Jquery is @jquery
 
 <h1>
-    @Model.Content.Name
+    @Model.Content.Name - Individual maps
 </h1>
 
-<div id="pretent-accordion" style="display:none;">
+<div id="pretent-accordion" style="display:@(Request.QueryString["show1"] != null ? "display" : "none");">
 
     @foreach (var record in Model.Content.Archetype)
     {
         var name = record.GetValue<string>("name");
         var map = record.GetValue<Terratype.Models.Model>("location");
 
-        @Html.Terratype(map, 400, 
+        @Html.Terratype(map, 
             @<text>
                 @name is at @map.Position
             </text>
@@ -28,3 +38,58 @@
 
 
 <button onclick="var a = document.getElementById('pretent-accordion');a.style.display = (a.style.display=='none') ? 'block':'none'">Show/Hide Map</button>
+
+
+<h1>
+    @Model.Content.Name - Combined maps
+</h1>
+
+
+<div id="pretent-accordion2" style="display:@(Request.QueryString["show2"] != null ? "display" : "none");">
+
+    @foreach (var record in Model.Content.Archetype)
+    {
+        var name = record.GetValue<string>("name");
+        var map = record.GetValue<Terratype.Models.Model>("location");
+
+        @Html.Terratype(new Options { MapSetId = 1 }, map,
+            @<text>
+                @name is at @map.Position
+            </text>
+        )
+    }
+</div>
+
+
+<button onclick="var a = document.getElementById('pretent-accordion2');a.style.display = (a.style.display=='none') ? 'block':'none'">Show/Hide Map</button>
+
+<h1>
+    @Model.Content.Name - Combined maps with options
+</h1>
+
+
+<div id="pretent-accordion3" style="display:@(Request.QueryString["show3"] != null ? "display" : "none");">
+
+    @Html.Terratype(new Options { Provider = new Terratype.Providers.GoogleMapsV3()
+    {
+        Variety = new Terratype.Providers.GoogleMapsV3.VarietyDefinition()
+        {
+            Satellite = true
+        }
+    }, MapSetId = 2, Zoom = 3, Position = new Terratype.CoordinateSystems.Wgs84("50,0") })
+
+    @foreach (var record in Model.Content.Archetype)
+    {
+        var name = record.GetValue<string>("name");
+        var map = record.GetValue<Terratype.Models.Model>("location");
+
+        @Html.Terratype(new Options { MapSetId = 2 }, map,
+            @<text>
+                @name is at @map.Position
+            </text>
+        )
+    }
+</div>
+
+
+<button onclick="var a = document.getElementById('pretent-accordion3');a.style.display = (a.style.display=='none') ? 'block':'none'">Show/Hide Map</button>
