--- a/src/Terratype.TestSite/Views/Mappy2.cshtml
+++ b/src/Terratype.TestSite/Views/Mappy2.cshtml
@@ -10,7 +10,7 @@
 </h1>
 
 
-<div id="pretent-accordion3" style="display:@(Request.QueryString["show3"] !=null ? "display":"none" );">
+<div id="pretend-accordion3" style="display:@(Request.QueryString["show3"] !=null ? "display":"none" );">
 
     @Html.Terratype(new Options
     {
@@ -41,4 +41,4 @@
 </div>
 
 
-<button onclick="var a = document.getElementById('pretent-accordion3');a.style.display = (a.style.display=='none') ? 'block':'none'">Show/Hide Map</button>
+<button onclick="var a = document.getElementById('pretend-accordion3');a.style.display = (a.style.display=='none') ? 'block':'none'">Show/Hide Map</button>
