--- a/src/Terratype.nuget/Terratype.nuget/Views/Simple.cshtml
+++ b/src/Terratype.nuget/Terratype.nuget/Views/Simple.cshtml
@@ -66,7 +66,7 @@ Jquery is @jquery
         </dd>
     </dl>
 
-    <div id="pretent-accordion" style="display:@(Request.QueryString["show"] != null ? "display" : "none");">
+    <div id="pretend-accordion" style="display:@(Request.QueryString["show"] != null ? "display" : "none");">
         <div style="height:1000px;background-color:antiquewhite;text-align:center;vertical-align:central;">
             This is an empty div
         </div>
@@ -82,7 +82,7 @@ Jquery is @jquery
         </div>
     </div>
 
-    <button onclick="var a = document.getElementById('pretent-accordion');a.style.display = (a.style.display=='none') ? 'block':'none'">Show/Hide Map</button>
+    <button onclick="var a = document.getElementById('pretend-accordion');a.style.display = (a.style.display=='none') ? 'block':'none'">Show/Hide Map</button>
 
 
 </fieldset>
